--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Task Management app created with MERN stack",
   "scripts": {
-    "dev": "concurrently \"cd server && pnpm run dev\" \"cd client && pnpm run dev\"",
-    "build": "concurrently \"cd server && pnpm run build\" \"cd client && pnpm run build\""
+    "dev": "concurrently --kill-others-on-fail \"cd server && pnpm run dev\" \"cd client && pnpm run dev\"",
+    "build": "concurrently --kill-others-on-fail \"cd server && pnpm run build\" \"cd client && pnpm run build\""
   },
   "repository": {
     "type": "git",
