Add proxy in vite.config.ts and implement a basic api fetch using axios

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Reversal9/task-management-app#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "concurrently": "^8.2.1"
   }
 }
