--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/js/app.js",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "build": "tsc",
     "start": "nodemon dist/js/app.js",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
