--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
   },
   "homepage": "https://github.com/Reversal9/task-management-app#readme",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.5.0",
-    "concurrently": "^8.2.1",
-    "react-redux": "^8.1.2"
+    "concurrently": "^8.2.1"
   }
 }
