--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
     "react-redux": "^8.1.3",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.5",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.26",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
